--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body{
 }
 
 #canvas{
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.514);
     
     
 }
@@ -40,7 +40,7 @@ body{
 
     width: 600px;
     height: 50px;
-    background-color: rgb(155, 155, 155);
+    background-color: rgba(155, 155, 155, 0.562);
 }
 
 #timer{
@@ -86,7 +86,7 @@ mark{
     place-items: center;
     width: 600px;
     height: 50px;
-    background-color: rgb(100, 100, 100);
+    background-color: rgba(100, 100, 100, 0.432);
 }
 #score_2{
     height: 100%;
